# FilterForge

./: .gitignore  Cargo.toml  README.md  package-lock.json
circuits/SPICE/: LM318.lib  MCP6021.lib  TL064.lib  TL074.lib  uopamp_v1.1.lib
circuits/input/: input.kicad_prl  input.kicad_pro  input.kicad_sch
circuits/lpf/: lpf.kicad_prl  lpf.kicad_pro  lpf.kicad_sch
circuits/ngspice/: check_response.sh  header.tex  lpf.cir  lpf.sch  plot.gp  spinit.sp  tex2pdf  viridis.pal
src/: aa_filter.rs  amp.rs  filters.rs  main.rs  utils.rs
